# CanvAI-Core

./: .env.example  LICENSE  README.md  pyproject.toml  run.py
app/: load_data.py  main.py  train.py
app/const/: types.json  types.py
app/routers/: predict.py
app/schemas/: drawing.py
app/utils/: model.py  predict.py
