[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.3.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
keras = "3.2.1"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
python-dotenv = "^1.0.1"
tensorboard = "2.16.2"
tensorboard-data-server = "0.7.2"
tensorflow = "2.16.1"
tensorflow-intel = "2.16.1"
tensorflow-io-gcs-filesystem = { version = "0.31.0", python = ">=3.7,<3.12" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "run:app"
load = "run:load"
train = "run:train"